# cashews

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  all_stat_columns.py  basic_stats.py  clonecheck.py  config.toml  crimes.py  dev.sh  docker-compose.yml  fetch_games.py  fetch_league.py  fetch_team_stats.py  ingest.sh  init.sh  maps.py  migrate-full.sh  migrate.sh  psql.sh  pyproject.toml  tasks.py  utils.py  web.py
cashews/: __init__.py  fetch_games.py  fetch_league.py  maps.py  stats.py  tasks.py  utils.py  web.py
cashews/scripts/: clonecheck.py  crimes.py  konami.py  list.py  timing.py  updategames.py
chron-api/: Cargo.toml
chron-api/src/: chron_api.rs  derived_api.rs  duck.rs  main.rs  polar.rs  stats.rs
chron-base/: Cargo.toml
chron-base/src/: cache.rs  lib.rs
chron-db/: Cargo.toml
chron-db/migrations/: 20250514111917_init.sql  20250514153605_derived.sql  20250516135846_teams.sql  20250516141524_more_indexes.sql  20250516142024_game_events_timestamp.sql  20250609183212_locations.sql  20250611154913_game_events_pitcher_batter_sd.sql  20250714133028_player_name_map.sql  20250719122325_special_days.sql  20250724205549_gps_concrete_fields.sql  20250726165927_gps_separate_table.sql  functions.sql  views.sql
chron-db/src/: derived.rs  duck.rs  lib.rs  models.rs  queries.rs  scylla_backend.rs  util.rs
chron-ingest/: Cargo.toml
chron-ingest/src/: http.rs  main.rs  models.rs  synthetic.rs
chron-ingest/src/workers/: crunch.rs  duck.rs  export.rs  feeds.rs  game_ids.txt  games.rs  import.rs  league.rs  maintenance.rs  map.rs  matviews.rs  message.rs  misc.rs  mod.rs  scylla.rs
scripts/: tickrate.py
templates/: box_score.html  games.html  map.html  players.html  stats.html  teams.html
web/: .dockerignore  .gitignore  Dockerfile  app.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/app/: routeTree.gen.ts  router.tsx
web/app/components/: ColorPreview.tsx  DataTablePagination.tsx  Footer.tsx  Navbar.tsx  StatsTable.tsx
web/app/lib/: colors.ts  data.ts  stats.ts
web/app/lib/data/: data.ts  stats.ts
web/app/routes/: __root.tsx  index.tsx  map.tsx  players.tsx  scorigami.tsx  teams.tsx
web/app/routes/team.$id/: index.tsx  route.tsx  stats.tsx
web/app/styles/: app.css
web/src/: api.ts  get-query-client.ts  routeTree.gen.ts  router.tsx
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/map/: page.tsx
web/src/app/players/: page.tsx
web/src/app/team/[team]/: layout.tsx  page.tsx
web/src/app/team/[team]/games/: page.tsx
web/src/app/team/[team]/stats/: page.tsx
web/src/app/teams/: page.tsx
web/src/components/: AppSidebar.tsx  ErrorBox.tsx  Footer.tsx  LeadersPage.tsx  Navbar.tsx  NewStatsTable.tsx  SeasonSelector.tsx  SiteHeader.tsx  StatsTable.tsx  TeamChart.tsx  TeamGamesTable.tsx  ThemeToggle.tsx
web/src/components/ui/: sidebar.tsx  table.tsx
web/src/data/: data.ts  stats.ts
web/src/hooks/: use-mmolb-data.ts
web/src/lib/: colors.ts  data.ts  newstats.ts  percentile.ts  stats.ts  utils.ts
web/src/routes/: __root.tsx  ducktest.tsx  leaders.tsx  map.tsx  players.tsx  query.tsx  scorigami.tsx  teams.tsx
web/src/routes/league.$id/: index.tsx  route.tsx
web/src/routes/player.$id/: index.tsx  route.tsx  stats.tsx
web/src/routes/team.$id/: games.tsx  index.tsx  roster.tsx  route.tsx  stats.tsx  stats2.tsx
web/src/styles/: map.css
