[workspace]
resolver = "2"
members = [ "chron-api","chron-base", "chron-db", "chron-ingest"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
chron-base = { path = "chron-base" }
chron-db = { path = "chron-db" }
compact_str = { version = "0.9.0", features = ["serde", "sqlx", "sqlx-postgres"] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
dashmap = "6.1.0"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "zstd"] }
sea-query = { version = "0.32.5", default-features = false, features = ["backend-postgres", "with-time", "with-uuid", "derive", "attr"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-json", "with-uuid", "with-time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
siphasher = "1.0.1"
strum = { version = "0.27.1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "json", "uuid", "migrate", "macros", "time"] }
time = { version = "0.3.41", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "compression-br", "compression-deflate", "compression-gzip", "timeout", "trace", "tracing", "compression-zstd"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
