[project]
name = "cashews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "orjson>=3.10.16",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "polars[adbc]>=1.29.0"
]
