[package]
name = "chron-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chron-base = { workspace = true }
chron-db = { workspace = true }
moka = { version = "0.12.10", features = ["future"] }
serde = { workspace = true }
serde_json.workspace = true
serde_with = "3.12.0"
sqlx.workspace = true
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
