[package]
name = "chron-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.6"
axum = { workspace = true }
axum-streams = { version = "0.21.0", features = ["csv", "json"] }
chron-base = { workspace = true }
chron-db = { workspace = true }
crossbeam = "0.8.4"
csv = "1.3.1"
futures.workspace = true
moka = { version = "0.12.10", features = ["future"] }
polars = { version = "0.49.1", features = ["dtype-categorical", "dtype-u16", "lazy", "polars-io", "performant"] }
polars-arrow = "0.49.1"
serde = { workspace = true }
serde_json.workspace = true
serde_qs = { version = "0.15.0", features = ["axum", "tracing", "futures"] }
serde_with = "3.12.0"
sqlx.workspace = true
strum.workspace = true
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
