[package]
name = "chron-base"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
