[package]
name = "chron-base"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-once-cell = "0.5.4"
config = { workspace = true }
dashmap.workspace = true
futures.workspace = true
hex = "0.4.3"
moka = { version = "0.12.10", features = ["future"] }
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = "0.1.24"
uuid = { workspace = true }
