[package]
name = "chron-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chron-base = { workspace = true }
dashmap = { workspace = true }
futures.workspace = true
log = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
uuid = { workspace = true }
