[package]
name = "chron-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.6"
base64 = { workspace = true }
chron-base = { workspace = true }
compact_str.workspace = true
dashmap = { workspace = true }
duckdb.workspace = true
futures.workspace = true
itertools.workspace = true
log = { workspace = true }
r2d2 = "0.8.10"
rand = "0.9.2"
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
sqlx = { workspace = true }
strum.workspace = true
time = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
uuid = { workspace = true }
