[package]
name = "chron-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brotli = "8.0.1"
chron-base = { workspace = true }
chron-db = { workspace = true }
ciborium = "0.2.2"
dashmap.workspace = true
duckdb.workspace = true
futures = { workspace = true }
rand = "0.9.1"
reqwest = { workspace = true }
scylla = "1.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = "0.1.24"
uuid = { workspace = true, features = ["v1"] }
zstd = "0.13.3"
