[package]
name = "chron-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chron-base = { workspace = true }
chron-db = { workspace = true }
dashmap.workspace = true
futures = { workspace = true }
rand = "0.9.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum.workspace = true
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = "0.1.24"
uuid = { workspace = true, features = ["v1"] }
